@@ -121,19 +121,6 @@ RVector3D Vector3D::Normalize (void)
   return *this;
 }
 
-/*
-DataStream & Vector3D::SaveData (DataStream& ofs)
-{
-  ofs << x << y << z;
-  return ofs;
-}
-
-DataStream & Vector3D::LoadData (DataStream& ifs)
-{
-  ifs >> x >> y >> z;
-  return ifs;
-}
-*/
 float Vector3D::GetAngle (const Vector3D &rcVect) const
 {
   float divid, fNum;
